Task definitions, Crowd flower API

--- a/WebBackend/www/css/style.scss
+++ b/WebBackend/www/css/style.scss
@@ -1,5 +1,5 @@
 .dialog_log{
-	width: 500px;
+	width: 555px;
 	height: 300px;
 	border: 1px solid gray;
 
@@ -9,7 +9,7 @@
 
 .utterance{
 	margin-top: 10px;
-	width: 450px;
+	width: 505px;
 }
 
 .utterance_submit{
@@ -27,4 +27,9 @@
 
 .user_text{
 	color: black;
+}
+
+.feedback_textarea{
+	width: 555px;
+	height: 300px;
 }
