--- a/WebBackend/www/no_tasks.haml
+++ b/WebBackend/www/no_tasks.haml
@@ -20,7 +20,7 @@
 
 
 .container
-	%article{class: "alert alert-success"}
+	%article{class: "alert alert-danger"}
 		%strong Stay tuned
 		%p We will run <b>multiple</b> experiments in <b>short time</b> and you will be able to participate again.
 
