Experiment0 Launch5 + Storage visualization

--- a/WebBackend/www/css/style.scss
+++ b/WebBackend/www/css/style.scss
@@ -33,3 +33,37 @@
 	width: 555px;
 	height: 300px;
 }
+
+.T_utterance{
+	background-color: lightblue;
+}
+
+.T_response{
+	background-color: lightblue;
+	font-weight: bold;
+}
+
+.T_reset{
+	background-color: orange;
+}
+
+.T_completition{
+	background-color: lightgreen;
+}
+
+.T_task{
+	background-color: yellow;
+}
+
+.T_Info{
+	font-style: italic;
+}
+
+.T_advice{
+	background-color: lightgreen;
+}
+
+
+.T_equivalence{
+	background-color: lightblue;
+}
