--- a/WebBackend/www/css/style.scss
+++ b/WebBackend/www/css/style.scss
@@ -12,6 +12,16 @@
 	width: 505px;
 }
 
+.col-md-1, .col-md-2, .col-md-3, .col-md-4,.col-md-5,.col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12{
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
+.act{
+ font-size: small; 
+ font-style: italic;
+}
+
 .utterance_submit{
 	width: 50px;
 }
@@ -34,7 +44,7 @@
 	height: 300px;
 }
 
-.T_utterance{
+.T_utterance, .act{
 	background-color: lightblue;
 }
 
