--- a/WebBackend/www/index.haml
+++ b/WebBackend/www/index.haml
@@ -1,5 +1,9 @@
 ﻿@dialog string
 
+%script{language: "javascript"}
+	var EXPERIMENT_ID="index";
+	var TASK_ID=0;
+
 .container
 	%nav{class: "navbar navbar-inverse navbar-fixed-top"}
 		.navbar-header
@@ -38,3 +42,4 @@
 
 %script{src: "js/chat.js"}
 	=""
+
