--- a/WebBackend/www/action_log.haml
+++ b/WebBackend/www/action_log.haml
@@ -20,7 +20,7 @@
 			= " " 
 			= @logfile.Id
 
-		%a{class: "btn btn-primary", href: "/logs"} Back to log files
+		%a{class: "btn btn-primary", href: "/logs?experiment="+ (@logfile.ExperimentId) } Back to log files
 
 
 
@@ -41,7 +41,7 @@
 
 					- if action.UserId
 						.col-md-4
-							%a{href: LinkToLog(action.UserId)} = action.UserId	
+							%a{href: LinkToLog(LogFileId(action), @logfile.ExperimentId)} = action.UserId	
 						.col-md-5
 							%div{class: action.Type}= action.Text		
 									
