Adding annotations, dataset export,...

--- a/WebBackend/www/layout.haml
+++ b/WebBackend/www/layout.haml
@@ -6,12 +6,17 @@
 		%title Knowledge dialog experiment
 		%link{ rel: "stylesheet", href: "css/bootstrap.min.css"}
 		%link{ rel: "stylesheet", href: "css/bootstrap-theme.min.css"}
+		%link{ rel: "stylesheet", href: "http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"}
 		%link{ rel: "stylesheet", href: "css/web-default.css"}
 		%link{ rel: "stylesheet", href: "css/style.scss"}
 		
 	   		
 		%script{src: "js/jquery-2.0.3.min.js"}			
 			= ""
+
+		%script{src: "http://code.jquery.com/ui/1.10.3/jquery-ui.js"}
+			= ""
+
 	%body
 
 		= yield
