--- a/WebBackend/www/css/style.scss
+++ b/WebBackend/www/css/style.scss
@@ -1,3 +1,20 @@
+.control_pane{
+	margin: 5px;
+
+	.controls{
+		margin: 5px;
+		background-color: lightgray;
+	}
+
+	a{
+		margin: 5px;
+	}
+
+	input{
+		margin: 5px;
+	}
+}
+
 .dialog_log{
 	width: 555px;
 	height: 300px;
