Experiment fix, Answer hint collection experiment implementation

--- a/WebBackend/www/question_collection.haml
+++ b/WebBackend/www/question_collection.haml
@@ -25,7 +25,7 @@
 
 .jumbotron#preface
 	{oncopy: "return false", oncut: "return false", onpaste: "return false", onselect: "return false", onmousedown: "return false"}.container
-		%h1 Try to help to the chatbot.
+		%h1 Try to help the chatbot.
 		%p 
 			The chatbot does <b>not</b> understand several questions. Try to help him through the chat window.
 			
