--- a/WebBackend/www/question_collection.haml
+++ b/WebBackend/www/question_collection.haml
@@ -48,6 +48,8 @@
 			%input{class:"utterance_submit", type: "submit", value: "Send"}
 				=""
 
+			%img{src: "/images/typing.gif", style:"height:1px;width:1px"}
+
 		.col-md-6
 			%h2 Feedback		
 			%span{style: "color: red"}
