Add event export/import, CF experiment + monitoring

--- a/WebBackend/www/logs.haml
+++ b/WebBackend/www/logs.haml
@@ -63,6 +63,9 @@
 		%p
 			%a{href: LinkToLog("advices", @current_experiment_id)}
 				Advice
+		%p
+			%a{href: "knowledge_votes?experiment_id=" + @current_experiment_id}
+				Knowledge Votes
 
 .container	
 		%h2 User log files
