Prepare AAAI experiments

--- a/WebBackend/www/logs.haml
+++ b/WebBackend/www/logs.haml
@@ -49,12 +49,16 @@
 				= @experiment_statistics.QuestionAnswerPairs
 
 			%p
-				%b Positive equivalencies: 
-				= @experiment_statistics.PositiveEquivalencies 
+				%b Positive one codes: 
+				= @experiment_statistics.PositiveOneCodes 
 
 			%p
-				%b Negative equivalencies: 
-				= @experiment_statistics.NegativeEquivalencies
+				%b Positive two codes: 
+				= @experiment_statistics.PositiveTwoCodes 
+
+			%p
+				%b Negative one codes: 
+				= @experiment_statistics.NegativeOneCodes
 
 		%h2 Structured data
 		%p
