Fix evaluation bugs + improve task readability

--- a/WebBackend/www/learn_restaurant_property.haml
+++ b/WebBackend/www/learn_restaurant_property.haml
@@ -23,7 +23,7 @@
 
 .jumbotron#preface
 	{oncopy: "return false", oncut: "return false", onpaste: "return false", onselect: "return false", onmousedown: "return false"}.container
-		%h1 Teach the chatbot.
+		%h1{style: "color:red"} Teach the chatbot.
 		%p 
 			The chatbot knows the <b>Bombay restaurant</b> but it does not know it has <b>moderate prices</b>. Teach bot that information.
 			
